ramen-rose-4> fixed the menu posiiton and user account button overflowing the header from right side

--- a/css/style.css
+++ b/css/style.css
@@ -367,11 +367,16 @@ html {
 
 .cart-bubble-text,
 .user-bubble-text {
-    position: absolute;
     padding: 5px 7px 5px 7px;
     height: auto;
 }
 
+.cart-bubble-text{
+    position: absolute;
+}
+.user-bubble-text{
+    float: right;
+}
 .cart-bubble-text:hover,
 .user-bubble-text:hover {
     background-color: var(--base-color-dark);
